# PI-game

./: CMakeLists.txt  README.md  siema.cpp
assets/: save.txt
assets/map/: map.json
assets/tiledmap/: mapka.json
include/game/: Animation.h  Bullet.h  Button.h  CollisionMap.h  Enemy.h  Game.h  Player.h  TileMap.h  Upgrade.h  Weapons.h  map.h
include/states/: DeathState.h  GameplayState.h  MainMenuState.h  MenuState.h  PauseState.h  State.h  StateManager.h  UpgradeState.h
include/utils/: Collider.h  DamageCalculator.h  UpgradeUtils.h
src/: Player.h  main.cpp
src/game/: Bullet.cpp  CollisionMap.cpp  Enemy.cpp  Game.cpp  Player.cpp  Weapons.cpp  map.cpp
src/states/: DeathState.cpp  GameplayState.cpp  MainMenuState.cpp  MenuState.cpp  PauseState.cpp  StateManager.cpp  UpgradeState.cpp
src/utils/: Collider.cpp  DamageCalculator.cpp
